--- a/djangoHW/templates/djangoHW/index.html
+++ b/djangoHW/templates/djangoHW/index.html
@@ -13,7 +13,8 @@
 <form method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="想要做什麼~" aria-label="Recipient's username" aria-describedby="button-addon2">
+        <input type="hidden" name="todo_id" value="{{ Djangohw.todo_id }}" />
+        <input type="text" name="todo" class="form-control" placeholder="想要做什麼~" aria-label="Recipient's username" aria-describedby="button-addon2">
         <button class="btn btn-outline-secondary" type="submit" id="button-addon2">送出</button>
     </div>
 </form>
@@ -29,33 +30,39 @@
     <tbody>
         {% for list in alltodo %}
         <tr>
-            <td>{{ list.checkbox }}</td>
-            <td>{{ list.learnsome }}</td>
-            <td>
+            <!-- <td id="todoCheck">
+                <input type="checkbox" name="check_it" class="form-check-input">
+                <label class="form-check-label" for="check_it">未完成</label>
+            </td> -->
+            <td id="todoCheck"><input class="form-check-input" type="checkbox" value="" unchecked> 未完成</td>
+            <td>{{ list.todo }}</td>
+            <td><a href="{% url 'djangoHW:delete' list.todo_id %}" class="btn btn-danger" onclick="return confirm('確定要刪除嗎~')">刪除</a>
             </td>
         </tr>
         {% endfor %}
     </tbody>
 
-
     </tbody>
 </table>
-
-<div class="form-check">
-    <!-- <input type="hidden" name="todolist" value="{{ member.member_id }}" /> -->
-    <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
-    <label class="form-check-label" for="flexCheckChecked">
-      已完成 學習什麼
-    </label>
-  </div>
 {% endblock %}
-
 
 
 {% block scripts %}
 <script>
-    const eleTable = document.querySelector("#table1>tbody")
-    const emps = [{"checkbox":"","learnSomething":""}];
+    const eleTables  = document.querySelectorAll("#todoCheck");
+    eleTables .forEach(theTd => {
+        var clickbtn = false;
+        theTd.addEventListener("click", () => {
+            clickbtn = !clickbtn;
 
+            if (clickbtn){
+                theTd.innerHTML = '<input class="form-check-input" type="checkbox" value="" checked> 已完成';
+            }else{
+                theTd.innerHTML = '<input class="form-check-input" type="checkbox" value="" unchecked> 未完成';
+            }
+    });
+});
 </script>
 {% endblock %}
+
+
