--- a/djangoHW/templates/djangoHW/index.html
+++ b/djangoHW/templates/djangoHW/index.html
@@ -14,7 +14,7 @@
     {% csrf_token %}
     <div class="input-group mb-3">
         <input type="hidden" name="todo_id" value="{{ Djangohw.todo_id }}" />
-        <input type="text" name="todo" class="form-control" placeholder="想要做什麼~" aria-label="Recipient's username" aria-describedby="button-addon2">
+        <input type="text" name="todo" class="form-control" placeholder="想要做什麼~" aria-label="Recipient's username" aria-describedby="button-addon2" required >
         <button class="btn btn-outline-secondary" type="submit" id="button-addon2">送出</button>
     </div>
 </form>
@@ -54,7 +54,7 @@
 
 {% block scripts %}
 <script>
-  
+
 </script>
 {% endblock %}
 
